--- a/w3_home_page.html
+++ b/w3_home_page.html
@@ -42,13 +42,33 @@
         </div>
     </section>
 
-    <section id="s2" style="background-color: #FFF4A3;">
+    
+    <section id="s2" style="background-color: #282A35;">
         <div class="s2Container">
             <div class="left">
-                <h1 style="font-size: 58px;">CSS</h1>
-                <p style="font-size: 18px;">The language for styling web pages</p>
-                <button style="background-color: #04AA6D; color: white; ">Learn CSS</button>
-                <button style="background-color: black; color: white; ">CSS Reference</button>
+                <h1 style="font-size: 58px; color: white;">JavaScript</h1>
+                <p style="font-size: 18px;  color: white;">The language for programming web pages</p>
+                <button style="background-color: #04AA6D; color: white; ">Learn JavaScript</button>
+                <button style="background-color: white; color: black; ">JavaScript Reference</button>
+                <button style="background-color: #FFC0C7; color: black; ">Get Certificate</button>
+            </div>
+            <div class="right" style="box-shadow:none">
+                <h2 style="margin-bottom: 5px;">CSS Example:</h2>
+                <textarea name="" id="" rows="20" cols="50">
+                    
+                </textarea>
+                <br>
+                <button style="background-color: #04AA6D; color: white; margin-top: 5px;">Try it Yourself</button>
+            </div>
+        </div>
+    </section>
+    <section id="s2" style="background-color: #F3ECEA;">
+        <div class="s2Container">
+            <div class="left">
+                <h1 style="font-size: 58px;">Python</h1>
+                <p style="font-size: 18px;">A popular programming language</p>
+                <button style="background-color: #04AA6D; color: white; ">Learn Python</button>
+                <button style="background-color: black; color: white; ">Python Reference</button>
                 <button style="background-color: #FFC0C7; color: black; ">Get Certificate</button>
             </div>
             <div class="right">
